# CreditOps

./: .env.example  .gitignore  CLAUDE.md  README.md  TESTE.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: cli.py  config.py  db.py  main.py  schema_guards.py  subscribers.py
app/api/: __init__.py  deps.py  v1.py
app/auth/: deps.py  passwords.py  sessions.py
app/models/: __init__.py  audit.py  change.py  cinema.py  collaboration.py  enums.py  org.py  platform.py  policy.py  workflow.py
app/plugins/: base.py  export_pdf.py  registry.py  webhook.py
app/services/: approval_rules.py  attachment_service.py  audit_service.py  authz.py  change_request_service.py  cinema_service.py  comment_service.py  dashboard_service.py  delegation_service.py  diff_service.py  docx_service.py  errors.py  events.py  export_service.py  impact_service.py  implementation_service.py  import_service.py  indicator_service.py  notification_service.py  policy_service.py  richtext.py  (+11 more)
config/: logging.toml  settings.example.toml
docs/: DOCUMENTACAO.md  runbook.md
examples/: seed.json
frontend/: README.md
migrations/: env.py
prompts/: 01-setup-projeto.md  02-modelo-de-dados.md  03-auth-rbac.md  04-catalogo-politicas.md  05-versoes-e-editor.md  06-workflow-aprovacao.md  07-auditoria-e-historico.md  08-busca-e-ux.md  09-testes-e-operacao.md  10-ia-plugavel.md  11-governanca-v1.md  12-plataforma-v2.md  README.md
scripts/: backup.py  restore.py  seed_demo.py  verify_audit.py  verify_data.py
tests/: conftest.py  helpers.py
(+144 files in other folders)
